Fixed small spacing issue

--- a/regexGame/public/stylesheets/homepage.css
+++ b/regexGame/public/stylesheets/homepage.css
@@ -1,3 +1,6 @@
 ﻿#main{
 	text-align: center;
 }
+.btn{
+	margin-right: 5px;
+}
